K8s/policies/pod-allow-web.yml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: web-allow-prod
spec:
  podSelector:
    matchLabels:
      app: poi
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          app: web
